# hal_realtek

./: CMakeLists.txt  KConfig  Kconfig  README.md
bee/: CMakeLists.txt  (+2 more)
bee/drivers/: CMakeLists.txt  Kconfig
bee/drivers/adc/: Kconfig
bee/drivers/adc/inc/: adc_lib.h  rtl_adc.h
bee/drivers/adc/src/: CMakeLists.txt
bee/drivers/adc/src/rtl8752h/: CMakeLists.txt  adc_lib.h  rtl8752h_adc.c  rtl876x_adc.c  rtl876x_adc.h
bee/drivers/adc/src/rtl87x2g/: CMakeLists.txt  adc_lib.c  rtl87x2g_adc.c  rtl87x2g_hradc.c  rtl_adc_def.h  rtl_hradc_def.h
bee/drivers/adc/src/rtl_common/: CMakeLists.txt  rtl_adc.c
bee/drivers/bluetooth/: Kconfig
bee/drivers/bluetooth/inc/: rtl_bt_hci.h
bee/drivers/bluetooth/src/: CMakeLists.txt
bee/drivers/bluetooth/src/rtl_common/: CMakeLists.txt  rtl_bt_hci.c
bee/drivers/can/: CMakeLists.txt  Kconfig
bee/drivers/can/inc/: rtl_can.h
bee/drivers/can/src/: CMakeLists.txt
bee/drivers/can/src/rtl87x2g/: CMakeLists.txt  rtl_can_def.h
bee/drivers/codec/: CMakeLists.txt  Kconfig
bee/drivers/codec/src/: CMakeLists.txt
bee/drivers/codec/src/rtl8752h/: CMakeLists.txt  rtl876x_codec.c  rtl876x_codec.h
bee/drivers/codec/src/rtl87x2g/: CMakeLists.txt  rtl_codec.c  rtl_codec.h  rtl_codec_def.h
bee/drivers/dma/: Kconfig
bee/drivers/dma/inc/: rtl_gdma.h
bee/drivers/dma/src/: CMakeLists.txt
bee/drivers/dma/src/rtl8752h/: CMakeLists.txt  rtl876x_gdma.c  rtl876x_gdma.h
bee/drivers/dma/src/rtl87x2g/: CMakeLists.txt  rtl87x2g_gdma.c  rtl_gdma_def.h
bee/drivers/dma/src/rtl_common/: CMakeLists.txt  rtl_gdma.c
bee/drivers/enh_tim/inc/: rtl_enh_tim.h
bee/drivers/enh_tim/src/: CMakeLists.txt
bee/drivers/gpio/: CMakeLists.txt  Kconfig
bee/drivers/gpio/inc/: rtl_gpio.h
bee/drivers/gpio/src/: CMakeLists.txt
bee/drivers/i2c/: CMakeLists.txt  Kconfig
bee/drivers/i2c/inc/: hal_i2c.h  rtl_i2c.h
bee/drivers/i2c/src/: CMakeLists.txt
bee/drivers/i2s/: CMakeLists.txt  Kconfig
bee/drivers/i2s/inc/: rtl_i2s.h
bee/drivers/ir/: Kconfig
bee/drivers/ir/inc/: rtl_ir.h
bee/drivers/keyscan/: Kconfig
bee/drivers/keyscan/inc/: rtl_keyscan.h
bee/drivers/keyscan/src/: CMakeLists.txt
bee/drivers/mac_802154/: CMakeLists.txt  Kconfig
bee/drivers/mac_802154/inc/: mac_802154_frame_parser.h
bee/drivers/mac_802154/rom/: frame_802154.h  mac_data_type.h  mac_driver.h  mac_drv_rom_patch.h  mac_reg.h  mac_reg_mask.h  mac_reg_type.h  power_manager_unit_zbmac.h  zb_section.h
bee/drivers/mac_802154/src/: mac_802154_frame_parser.c  mac_802154_xip.c
bee/drivers/nvic/: CMakeLists.txt  Kconfig
bee/drivers/nvic/inc/: rtl_nvic.h
bee/drivers/nvic/src/: CMakeLists.txt
bee/drivers/pinmux/: Kconfig
bee/drivers/pinmux/inc/: rtl_pinmux.h
bee/drivers/pinmux/src/: CMakeLists.txt
bee/drivers/ppt/: CMakeLists.txt  Kconfig
bee/drivers/ppt/sync/: CMakeLists.txt
bee/drivers/qdec/: CMakeLists.txt  Kconfig
bee/drivers/qdec/inc/: rtl_aon_qdec.h  rtl_qdec.h
bee/drivers/qdec/src/: CMakeLists.txt
bee/drivers/rcc/: CMakeLists.txt  Kconfig
bee/drivers/rcc/inc/: rtl_rcc.h
bee/drivers/rcc/src/: CMakeLists.txt
bee/drivers/rtc/: Kconfig
bee/drivers/rtc/inc/: rtl_rtc.h
bee/drivers/rtc/src/: CMakeLists.txt
bee/drivers/rtl876x/: CMakeLists.txt
bee/drivers/rtl876x/rtl8752h/: rtl876x_alias.h  rtl876x_bitfields.h
bee/drivers/sdhc/: Kconfig
bee/drivers/sdhc/inc/: rtl_sdhc.h
bee/drivers/sdhc/src/: CMakeLists.txt
bee/drivers/spi/: Kconfig
bee/drivers/spi/inc/: rtl_spi.h
bee/drivers/spi/src/: CMakeLists.txt
bee/drivers/spi3w/: Kconfig
bee/drivers/spi3w/inc/: rtl_spi3w.h
bee/drivers/tim/: Kconfig
bee/drivers/tim/inc/: rtl_enh_tim.h  rtl_tim.h
bee/drivers/tim/src/: CMakeLists.txt
bee/drivers/uart/: Kconfig
bee/drivers/uart/inc/: rtl_uart.h
bee/drivers/uart/src/: CMakeLists.txt
bee/drivers/usb/: CMakeLists.txt  Kconfig
bee/drivers/usb/usb_hal/: CMakeLists.txt
bee/drivers/utils/: rtl_utils.h
bee/drivers/voice/: CMakeLists.txt  Kconfig
bee/drivers/voice/encode/: CMakeLists.txt
bee/drivers/wdt/: Kconfig
bee/drivers/wdt/inc/: hal_wdt.h  reset_reason.h  rtl_aon_wdt.h  rtl_wdt.h
bee/drivers/wdt/src/: CMakeLists.txt
(+350 files in other folders)
