add_subdirectory_ifdef(CONFIG_REALTEK_ADC adc)
add_subdirectory_ifdef(CONFIG_REALTEK_UART uart)
add_subdirectory_ifdef(CONFIG_REALTEK_RCC rcc)
add_subdirectory_ifdef(CONFIG_REALTEK_PINMUX pinmux)
add_subdirectory_ifdef(CONFIG_REALTEK_NVIC nvic)
add_subdirectory_ifdef(CONFIG_REALTEK_TIM tim)
add_subdirectory_ifdef(CONFIG_REALTEK_RTC rtc)
add_subdirectory_ifdef(CONFIG_REALTEK_DMA dma)
add_subdirectory_ifdef(CONFIG_REALTEK_GPIO gpio)
add_subdirectory_ifdef(CONFIG_REALTEK_I2C i2c)
add_subdirectory_ifdef(CONFIG_REALTEK_KEYSCAN keyscan)
add_subdirectory_ifdef(CONFIG_REALTEK_QDEC qdec)
add_subdirectory_ifdef(CONFIG_REALTEK_SPI spi)
add_subdirectory_ifdef(CONFIG_REALTEK_USB usb)
add_subdirectory_ifdef(CONFIG_REALTEK_BT bluetooth)
if (CONFIG_REALTEK_CORE_WDT OR CONFIG_REALTEK_AON_WDT)
add_subdirectory(wdt)
endif()
